# Version 2.1.14
 - Added support for client IP address encryption in logs using IPCrypt
(https://ipcrypt-std.github.io/). Three algorithms are supported:
deterministic, non-deterministic with 8-byte tweak, and extended
non-deterministic with 16-byte tweak.
 - Enhanced pattern rule documentation with better examples.
 - Fixed an issue where nil client addresses could cause crashes.

# Version 2.1.13
 - Fixed race conditions in WebSocket handling for the monitoring dashboard,
improving stability and preventing potential crashes.
 - Manual configuration reload via SIGHUP is now supported regardless of the
hot-reload setting, providing more flexibility for system administrators.
 - Fixed a regression in IP prefix matching for allow/block lists that could
cause incorrect filtering behavior.
 - The monitoring dashboard now properly displays blocked queries counter and
tracks blocked queries in the UI.
 - Improved error handling in the cache plugin initialization.
 - Enhanced the forward plugin to return the last valid response when
encountering only errors, improving resilience.
 - Fixed various UI issues including scrolling behavior, WebSocket reconnection
handling, and response time calculations.
 - Updated the example configuration with current Quad9 source URLs.
 - The generate-domains-blocklist script now handles poor network conditions
more gracefully.
 - Improved handling of DNS64 trampoline queries to prevent potential issues.

# Version 2.1.12
 - A new Weighted Power of Two (WP2) load balancing strategy has been
implemented as the default, providing improved distribution across resolvers.
 - An optional Prometheus metrics endpoint has been added for monitoring and
observability.
 - Memory usage for the cache has been reduced.
 - The monitoring dashboard has received significant improvements including
better security, performance optimizations, WebSocket rate limiting, and HTTP
caching headers.
 - The monitoring UI has been refined with stable sorting to prevent